<resources>
    <string name="app_name">WeatherApplication</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB026OKPWKYGYeIRWfFghA69xzaQC_p9Mk</string>
    <string name="openweather_api_key" templateMergeStrategy="preserve" translatable="false">198d7c690bab77e565ecd8cbcd46e30a</string>
    <string name="min_max_temperature">"H %1$s ℃/L %2$s ℃"</string>
    <string name="wind_speed">"%1$s m/s"</string>
    <string name="humidity">"%1$s\%%"</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="degree_C">c</string>
    <string name="degree_O">o</string>
    <string name="main_sunrise">sunrise</string>
    <string name="main_wind">wind</string>
    <string name="main_humidity">humidity</string>
    <string name="main_now">now</string>
    <string name="menu_light_mode">Light Mode</string>

</resources>