<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:padding="@dimen/widget_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/widget_padding">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <RelativeLayout
                    android:id="@+id/relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/location_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:src="@drawable/location_icon" />

                    <TextView
                        android:id="@+id/widget_city_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10dp"
                        android:text=""
                        android:textColor="@color/textcolor"
                        android:textSize="18sp"
                        android:layout_toEndOf="@+id/location_icon" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/weather_icon"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100dp"
                    android:layout_below="@id/relative_layout"
                    android:src="@drawable/sunny_big"
                    android:layout_margin="@dimen/_10dp"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">


                <TextView
                    android:id="@+id/widget_high_low_temperature_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:gravity="center"
                     android:layout_below="@+id/frame_layout"/>

                <TextView
                    android:id="@+id/widget_weather_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:gravity="center"
                    android:textColor="@color/textcolor"
                    android:textSize="25sp"
                    android:layout_alignParentTop="true" />

                <RelativeLayout
                    android:id="@+id/frame_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_90dp"
                    android:gravity="center"
                    android:layout_below="@id/widget_weather_tv">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5dp"
                        android:text="@string/degree_O"
                        android:textSize="30sp"
                        android:layout_toEndOf="@+id/widget_temperature_tv"
                        android:layout_alignTop="@+id/widget_temperature_tv"
                        />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5dp"
                        android:text="@string/degree_C"
                        android:textSize="30sp"
                        android:layout_toEndOf="@+id/widget_temperature_tv"
                        android:layout_alignBottom="@+id/widget_temperature_tv"/>

                    <TextView
                        android:id="@+id/widget_temperature_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="60sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </RelativeLayout>

            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/widget_day_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/main_now"
                    android:textColor="@color/textcolor" />

                <ImageView
                    android:id="@+id/widget_day_1_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_below="@id/widget_day_1"
                    app:srcCompat="@drawable/sunny" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/widget_day_2"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/textcolor" />

                <ImageView
                    android:id="@+id/widget_day_2_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_below="@id/widget_day_2"
                    app:srcCompat="@drawable/sunny" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/widget_day_3"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/textcolor" />

                <ImageView
                    android:id="@+id/widget_day_3_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_below="@+id/widget_day_3"
                    app:srcCompat="@drawable/sunny" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/widget_day_4"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/textcolor" />

                <ImageView
                    android:id="@+id/widget_day_4_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_below="@+id/widget_day_4"
                    app:srcCompat="@drawable/sunny" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/widget_day_5"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/textcolor"/>

                <ImageView
                    android:id="@+id/widget_day_5_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_below="@+id/widget_day_5"
                    app:srcCompat="@drawable/sunny" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>